2014-09-19  Carlos Garcia Campos  <cgarcia@igalia.com>

        Webkitgtk 2.5.3: tarball contains APPLE LICENSE file - stating not distributable
        https://bugs.webkit.org/show_bug.cgi?id=136632

        Reviewed by Gustavo Noronha Silva.

        * PlatformGTK.cmake: Use only the icons from the gtk directory since they are free.

2014-09-19  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] generate-inspector-gresource-manifest.py should receive the list of files from the makefile
        https://bugs.webkit.org/show_bug.cgi?id=136943

        Reviewed by Philippe Normand.

        * PlatformGTK.cmake: Fix the inspector file list and pass it to
        the generate-inspector-gresource-manifest.py script.

2014-09-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Dot not allow to create delete-on-destroy GMainLoopSources
        https://bugs.webkit.org/show_bug.cgi?id=136923

        Reviewed by Gustavo Noronha Silva.

        * Platform/gtk/WorkQueueGtk.cpp:
        (WorkQueue::dispatch): Use GMainLoopSource::scheduleAndDeleteOnDestroy().
        (WorkQueue::dispatchAfter): Use GMainLoopSource::scheduleAfterDelayAndDeleteOnDestroy().

2014-09-18  Ryuan Choi  <ryuan.choi@gmail.com>

        [EFL][CoordinatedGraphics] Remove setBackgroundColor message
        https://bugs.webkit.org/show_bug.cgi?id=136824

        Reviewed by Gyuyoung Kim.

        CoordinatedGraphics used setBackgroundColor() to draw the background of contents
        although tiles are not ready.

        This patch removes setBackgroundColor() and uses pageExtendedBackgroundColor()
        which provides similar functionality.

        * UIProcess/API/efl/EwkView.cpp:
        Enables or disables WKPageSetBackgroundExtendsBeyondPage to use pageExtendedBackgroundColor()
        (EwkView::EwkView):
        (EwkView::setBackgroundColor):
        * UIProcess/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:
        (WebCore::CoordinatedGraphicsScene::CoordinatedGraphicsScene):